Add new man page.  Fix a few typos in other man pages.
Original commit message from CVS:
Add new man page.  Fix a few typos in other man pages.

--- a/gstreamer/tools/gst-launch.1
+++ b/gstreamer/tools/gst-launch.1
@@ -153,7 +153,7 @@ and the type can have the following case-insensitive values:
 If no type was given, the following order is tried: integer, float, boolean, 
 string.
 .br
-Integer values must be parsable by strtol, floats by strtol. FOURCC values may
+Integer values must be parsable by \fBstrtol()\fP, floats by \fBstrtod()\fP. FOURCC values may
 either be integers or strings. Boolean values are (case insensitive) \fIyes\fR, 
 \fIno\fR, \fItrue\fR or \fIfalse\fR and may like strings be escaped with " or '.
 .br
