Add number-of-iterations option.
Original commit message from CVS:
Add number-of-iterations option.

--- a/gstreamer/tools/gst-launch.1
+++ b/gstreamer/tools/gst-launch.1
@@ -38,6 +38,9 @@ Do not install a fault handler
 .B  \-t, \-\-trace
 Print memory allocation traces. The feature must be enabled at compile time to
 work.
+.TP 8
+.B  \-i, \-\-iterations=N
+Stop processing after N iterations.
 
 .
 .SH "GSTREAMER OPTIONS"
