--- a/gst-plugins-good/gst/level/README
+++ b/gst-plugins-good/gst/level/README
@@ -1,11 +1,21 @@
 level plugin by thomas <thomas@apestaart.org>
 
-basic level indicator; prints out RMS values averaged over the buffer of
-one iteration.  Insert this into an audio/raw chain.
+this plugin signals:
+  - channel
+  - RMS level
+  - peak level
+  - decaying peak level
+over the given interval.
 
-You can plot the level envelope of the track using gnuplot, example :
+This is useful for a VU meter display and for plotting out the signal graph.
+The VU meter can either display RMS, or display immediate peak level and
+have the falloff decaying peak level displayed as a line.
 
-tools/gstreamer-launch disksrc location=foo.wav ! parsewav ! level ! \
-  fakesink silent=true > foo.level
-graph -T gif foo.level > foo.gif
-xview dark.gif
+The interval for signal emission, ttl of decay peak, and falloff of decay peak
+can all be set.
+
+The element only takes unsigned data in; it could be extended to signed as
+well, if separate fast chain functions are made that displaces the incoming
+data to its midpoint (ie, 0,65535 should be mapped to -32768, 32767)
+
+
