Give credit to Mark Borgerding (kissfft author)
and add myself to AUTHORS as well. Fixes #575638.

--- a/gst-plugins-base/AUTHORS
+++ b/gst-plugins-base/AUTHORS
@@ -19,3 +19,5 @@ Ronald Bultje <rbultje@ronald.bitfreak.net>
 Julien MOUTTE <julien@moutte.net>
 Jan Schmidt <thaytan@mad.scientist.com>
 Arwed v. Merkatz <v.merkatz@gmx.net>
+Tim-Philipp Müller <tim at centricular dot net>
+Mark Borgerding <mark at borgerding dot net> (kissfft, used in libgstfft)
